Fix onboarding and modal overflow

--- a/idea/frontend/src/app/App.scss
+++ b/idea/frontend/src/app/App.scss
@@ -21,11 +21,14 @@ body {
   background-repeat: no-repeat;
   background-position: right -150px top -50px;
   min-height: 100vh;
+
+  &.noOverflow {
+    overflow: hidden;
+  }
 }
 
 #root {
   position: relative;
-  overflow-x: hidden; // cuz of onboarding animations
 }
 
 .main {
